Fix:fix animation overlaping image

--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,8 @@ border-radius:50%;
 #mainSectionTwoPanelDownImg{
     filter:drop-shadow(0px 0px 10px black);
     height:550px;
+    z-index:1;
+    position: relative;
     transition:.2s all ease;
     filter:hue-rotate(180deg) sepia(75%) contrast(150%) saturate(300%) hue-rotate(180deg) grayscale(.4);
 
@@ -101,6 +103,7 @@ border-radius:50%;
     white-space:nowrap;
     font-weight:800;
     text-shadow:1px 1px 20px black;
+    z-index:0;
 }
 #mainSectionTwoPanelDownTitleOne{
     top:0;
